# error

./: CMakeLists.txt  README.md  clib.json  package.json
examples/: build.cmake  main.c
sources/: error.c  error.h
